# Checkers

./: Checkers_Student_Manual.docx  Final Report.docx  GeneralStudentManual.md  readme.md
Tools/: AI_Runner.py  submission.py
Tools/Sample_AIs/Poor_AI/: BoardClasses.py  GameLogic.py  StudentAI.py  main.py
Tools/Sample_AIs/Random_AI/: BoardClasses.py  main.py
checkers-cpp/: AI.h  Checker.h  GameLogic.h  Move.cpp  StudentAI.cpp  StudentAI.h  main.cpp
checkers-java/: AI.java  Board.java  Checker.java  Direction.java  GameLogic.java  InvalidParameterError.java  Main.java  Makefile  Move.java
checkers-python/: BoardClasses.py  ManualAI.py  Move.py
checkers-python/AI_Extensions/: Communicator.py  Network_AI.py  RandomAI.py
src/checkers-cpp/: AI.h  Board.cpp  Board.h  CMakeLists.txt  Checker.cpp  Checker.h  GameLogic.cpp  GameLogic.h  Makefile  ManualAI.cpp  ManualAI.h  Move.cpp  Move.h  StudentAI.cpp  StudentAI.h  Utils.cpp  Utils.h  main.cpp
src/checkers-java/: AI.java  Board.java  Checker.java  Direction.java  GameLogic.java  InvalidMoveError.java  Main.java  Makefile  ManualAI.java  Move.java  Position.java  StudentAI.java
src/checkers-python/: BoardClasses.py  Checker.py  GameLogic.py  ManualAI.py  Move.py  StudentAI.py  main.py
src/checkers-python/AI_Extensions/: Communicator.py  IOAI.py
src/checkers-python/Tools/: AI_Runner.py
src/checkers-python/Tools/Sample_AIs/Average_AI/: BoardClasses.py  Checker.py  GameLogic.py  ManualAI.py  main.py
src/checkers-python/Tools/Sample_AIs/Average_AI_368/: BoardClasses.py  Checker.py  GameLogic.py  ManualAI.py  (+1 more)
(+26 files in other folders)
